--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
 
             <div class="navbar-header">
                 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
+                    <span class="ni-3x ni ni-bullet-list-67"></span>
                 </button>
 
                 <!-- lOGO TEXT HERE -->
@@ -115,7 +113,7 @@
                     <li><a href="#about" class="smoothScroll"><i class="ni ni-circle-08"></i> About Me</a></li>
                     <li><a href="#service" class="smoothScroll"><i class="ni ni-briefcase-24"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="ni ni-collection"></i> Portfolio</a></li>
-                    <li><a href="#contact" class="smoothScroll"><i class="ni ni-tie-bow"></i> Hire Me</a></li>
+                    <li><a href="#contact" class="smoothScroll"><i class="ni ni-satisfied"></i> Hire Me</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -196,9 +194,10 @@
                             Campus Organizer @<a target="_blank" href="https://forloop.africa">forLoop</a></p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security. 💡</p>
-                        <p>I'm passionate about developing and designing brilliant innovative products. ❤️<br />
-                        <p> I love helping bussinesses scale and flourish 😍</p> <br />
-                        <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
+                        <p>I'm passionate about developing and designing brilliant innovative products. <i class="ni ni-favourite-28"></i><br />
+                            <p> I love helping bussinesses scale and flourish <i class="ni ni-user-run"></i> <i class="ni ni-spaceship"></i></p>
+                            <br />
+                            <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
 
 
                     </div>
@@ -284,7 +283,9 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image1.png" class="img-responsive" alt="">
                             <h3>Web Design</a></h3>
-                            <p>Responsive website development that automatically scales up and down to meet the needs of whatever screen size it's on with great focus on user experience, optimization, speed
+                            <p>Responsive website development that automatically scales up and down to meet the needs
+                                of whatever screen size it's on with great focus on user experience, optimization,
+                                speed
                                 & security.</p>
                         </div>
                     </div>
@@ -308,7 +309,8 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image3.png" class="img-responsive" alt=""></a>
                             <h3>Wordpress CMS</a></h3>
-                            <p>Wordpress Content management system is a user-friendly administrative area allowing you to easily edit &
+                            <p>Wordpress Content management system is a user-friendly administrative area allowing you
+                                to easily edit &
                                 manage your website's content.</p>
                         </div>
                     </div>
@@ -353,7 +355,8 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image7.png" class="img-responsive" alt=""></a>
                             <h3>Digital Marketing</a></h3>
-                            <p>Product/Brand promotion via several social and digital platforms leading to product boost and customers
+                            <p>Product/Brand promotion via several social and digital platforms leading to product
+                                boost and customers
                                 acqusition.</p>
                         </div>
                     </div>
@@ -365,7 +368,9 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image8.png" class="img-responsive" alt=""></a>
                             <h3>Search Engine Optimization</a></h3>
-                            <p>There's a lot of competition out there, so we ensure to include correct meta tagging & descriptions, open graphs and provide SEO training and strategy for each of our clients to ensure continous traffic count..</p>
+                            <p>There's a lot of competition out there, so we ensure to include correct meta tagging &
+                                descriptions, open graphs and provide SEO training and strategy for each of our clients
+                                to ensure continous traffic count..</p>
                         </div>
                     </div>
                 </div>
@@ -373,12 +378,13 @@
         </div>
     </section>
 
-<div class="col-md-12">
-    <div class="container">
-        <h3 style="text-align: center;"> 100% Satisfaction Guaranteed <i class="ni ni-satisfied"></i></h3> <br />
-<p> We don't bother you with up front deposits or lengthy contracts. If you're not happy with the website when all is said and done, we will work until you're happy.</p>
+    <div class="col-md-12">
+        <div class="container">
+            <h3 style="text-align: center;"> 100% Satisfaction Guaranteed <i class="ni ni-satisfied"></i></h3> <br />
+            <p> We don't bother you with up front deposits or lengthy contracts. If you're not happy with the website
+                when all is said and done, we will work until you're happy.</p>
+        </div>
     </div>
-</div>
 
 
     <!--BLOG SECTION-->
@@ -475,8 +481,8 @@
                 <a class="twitter-timeline" data-tweet-limit="3" data-link-color="#19CF86" href="https://twitter.com/iambolajiayo?ref_src=twsrc%5Etfw">Tweets
                     by iambolajiayo</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <a href="https://twitter.com/intent/tweet?screen_name=bolajiayodeji&ref_src=twsrc%5Etfw" data-text="Hello there, i so much love your website; the user interface is awesome. Welldone!!" class="twitter-mention-button"
-                    data-show-count="false">Love this site? Tweet to @bolajiayodeji</a>
+                <a href="https://twitter.com/intent/tweet?screen_name=bolajiayodeji&ref_src=twsrc%5Etfw" data-text="Hello there, i so much love your website; the user interface is awesome. Welldone!!"
+                    class="twitter-mention-button" data-show-count="false">Love this site? Tweet to @bolajiayodeji</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="col-md-6">
@@ -737,7 +743,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                                <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="active item">
@@ -747,7 +753,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                                <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -757,7 +763,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                                <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -767,7 +773,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                                <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -777,7 +783,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                                <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -962,7 +968,9 @@
                     <div class="footer-bottom">
                         <div class="col-md-6 col-sm-5">
                             <div class="copyright-text">
-                                <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script></p>
+                                <p>Copyright &copy;
+                                    <script>document.write(new Date().getFullYear());</script>
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-7">
