--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                 <div class="col-md-3 col-sm-6">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                        <a href="images/work-image4.jpg" class="image-popup">
+                        <a href="https://icafulokoja.github.io" target="_blank" class="">
                             <img src="images/work-image4.jpg" class="img-responsive" alt="Work">
 
                             <div class="work-info">
