Added TCP Badge

--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
         </div>
     </section>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <img src="images/cpb.jpg" class="ml1 img-responsive center" alt="TemplateMonster Certified Partner Badge">
+            </div>
+        </div>
+    </div>
+
     <!-- <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -797,7 +805,7 @@
                     </div>
                 </div>
 
- <div class="col-md-3 col-sm-4">
+                <div class="col-md-3 col-sm-4">
                     <div class="footer-thumb">
                         <h2>Find me</h2>
                         <p><i class="fa fa-map-marker"></i> Behind Commisioners Quarters, <br> Lokoja, Kogi State,
@@ -810,15 +818,15 @@
                 <div class="col-md-2 col-sm-4">
                     <div class="footer-thumb">
                         <div class="twitter-feed">
-                                            <a class="twitter-timeline" js.async=true; data-link-color="#19CF86" data-width="300"
-                                            data-height="300" data-chrome="nofooter" href="https://twitter.com/iambolajiayo?ref_src=twsrc%5Etfw">Tweets
-                                                by iambolajiayo</a>
-                        </ul>
-                    </div>
+                            <a class="twitter-timeline" js.async=true; data-link-color="#19CF86" data-width="300"
+                                data-height="300" data-chrome="nofooter" href="https://twitter.com/iambolajiayo?ref_src=twsrc%5Etfw">Tweets
+                                by iambolajiayo</a>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
-               
+
 
                 <div class="col-md-12 col-sm-12">
                     <div class="footer-bottom">
