--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
                 <div class="col-md-4 col-sm-12">
                     <div>
-                        <img src="images/about-img.jpg" class="img-responsive about-image" alt="My Picture">
+                        <img src="images/bolaji.jpg" class="img-responsive about-image" alt="Bolaji Ayodeji">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
@@ -251,7 +251,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <img src="images/cpb.jpg" class="ml1 img-responsive center" alt="TemplateMonster Certified Partner Badge">
+                <a href="https://certification.templatemonster.com/" target="_blank"><img src="images/cpb.jpg" class="ml1 img-responsive center" alt="TemplateMonster Certified Partner Badge"></a>
             </div>
         </div>
     </div>
