fixed big change

--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123719673-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-123719673-1');
     </script>
 
 
-    <title>BOLAJI - THE GEEK 🔥🚀</title>
+    <title>BOLAJI AYODEJI 🔥🚀 | Portfolio</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Twitter Card-->
-    <meta name="twitter:title" content="BOLAJI - THE GEEK 🔥🚀">
+    <meta name="twitter:title" content="BOLAJI AYODEJI 🔥🚀 | Portfolio">
     <meta name="twitter:site" content="@iambolajiayodeji" />
     <meta name="twitter:creator" content="@iambolajiayodeji" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
@@ -32,24 +35,24 @@
     <meta property="fb:page_id" content="872194893169133" />
     <!--Open Graph-->
     <meta property="og:image" content="images/about-image.jpg">
-    <meta property="og:title" content="BOLAJI - THE GEEK 🔥🚀" />
+    <meta property="og:title" content="BOLAJI AYODEJI 🔥🚀 | Portfolio" />
     <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
-    <meta name="author" content="Bolaji Ayodeji">
+    <meta name="author" content="BOLAJI AYODEJI">
     <meta property="og:url" content="https://bolajiayodeji.github.io" />
-    <meta property="og:site_name" content="BOLAJI - THE GEEK 🔥🚀" />
+    <meta property="og:site_name" content="BOLAJI AYODEJI 🔥🚀 | Portfolio" />
     <meta property="og:type" content="Portfolio Website" />
 
     <!-- Google Knowledge Graph card -->
     <script type='application/ld+json'>
-            {
-              "@context": "http://www.schema.org",
-              "@type": "Software Developer",
-              "name": "Bolaji Ayodeji (@iambolajiayo)",
-              "url": "https://bolajiayodeji.github.io",
-              "logo": "https://bolajiayodeji.github.io/images/about-image.png",
-              "description": "I build and deploy software applications with great focus on stunning interface design, optimization and security."
-            } 
-		</script>
+        {
+            "@context": "http://www.schema.org",
+            "@type": "Software Developer",
+            "name": "BOLAJI AYODEJI (@iambolajiayo)",
+            "url": "https://bolajiayodeji.github.io",
+            "logo": "https://bolajiayodeji.github.io/images/about-image.png",
+            "description": "I build and deploy software applications with great focus on stunning interface design, optimization and security."
+        }
+    </script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
@@ -62,7 +65,7 @@
     <link rel="shortcut icon" href="images/fav.png">
 
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="css/main-style.css">
+    <link rel="stylesheet" href="css/app.css">
 
 </head>
 
@@ -84,13 +87,13 @@
     </div>
 
 
-    <!-- PRE LOADER -->
+    <!-- PRE LOADER
     <section class="preloader">
         <div class="spinner">
             <span class="spinner-rotate"></span>
         </div>
 
-    </section>
+    </section> -->
 
 
     <!-- MENU -->
@@ -103,7 +106,7 @@
                 </button>
 
                 <!-- lOGO TEXT HERE -->
-                <a href="index.html" class="navbar-brand"><i class="ni camera-compact"></i>&nbsp; Bolaji - The Geek</a>
+                <a href="index.html" class="navbar-brand"><i class="ni camera-compact"></i>&nbsp;BOLAJI AYODEJI</a>
             </div>
 
             <!-- MENU LINKS -->
@@ -187,17 +190,16 @@
                         </div>
                         <p>Hello there! I'm Bolaji Ayodeji. <br />
                             OpenSource Advocate 🔥🚀 <br />
-                            Chief Tech Support @<a target=_blank" href="https://youthsundefined.org">Youths Undefined</a>
-                            <br />
-                            Campus Ambassador @<a target="_blank" href="https://ingressive.co">Ingressive</a><br />
-                            Student Ambassador @<a target=_blank" href="https://favcode54.org">Favcode54</a> <br />
+                            Chief Tech Support @<a target=_blank" href="https://youthsundefined.org">Youths Undefined</a><br />
+                            Web Developer Intern @<a target=_blank" href="https://upnepa.ng">Upnepa Ng</a><br />
+                            Campus Ambassador @<a target="_blank" href="https://ingressive.co">Ingressive</a> @<a
+                                target=_blank" href="https://favcode54.org">Favcode54</a> <br />
                             Campus Organizer @<a target="_blank" href="https://forloop.africa">forLoop</a></p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security. 💡</p>
-                        <p>I'm passionate about developing and designing brilliant innovative products. <i class="ni ni-favourite-28"></i><br />
-                            <p> I love helping bussinesses scale and flourish <i class="ni ni-user-run"></i> <i class="ni ni-spaceship"></i></p>
-                            <br />
-                            <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
+                        <p>I'm passionate about developing and designing brilliant innovative products. 💡</p><br />
+
+                        <a class="section-btn" href="resume.pdf">View Resume <i class="fa fa-arrow-right"></i></a>
 
 
                     </div>
@@ -251,7 +253,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <a href="https://certification.templatemonster.com/" target="_blank"><img src="images/cpb.jpg" class="ml1 img-responsive center" alt="TemplateMonster Certified Partner Badge"></a>
+                <a href="https://certification.templatemonster.com/" target="_blank"><img src="images/cpb.jpg" class="ml1 img-responsive center"
+                        alt="TemplateMonster Certified Partner Badge"></a>
             </div>
         </div>
     </div>
@@ -389,7 +392,7 @@
     <div class="col-md-12">
         <div class="container">
             <h3 style="text-align: center;"> 100% Satisfaction Guaranteed <i class="ni ni-satisfied"></i></h3> <br />
-            <p> We don't bother you with up front deposits or lengthy contracts. If you're not happy with the website
+            <p> We don't bother you with up front deposits or lengthy contracts. If you're not happy with the project
                 when all is said and done, we will work until you're happy.</p>
         </div>
     </div>
@@ -414,11 +417,14 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <small><i class="fa fa-clock-o"></i> August 5, 2018</small>
-                            <h3><a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc">The A-Z
-                                    of programming for newbies</a></h3>
-                            <p>List of useful programming terms from A to Z.</p>
-                            <a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc" class="btn section-btn">Read
+                            <small><i class="fa fa-clock-o"></i> Nov 11, 2018</small>
+                            <h3><a href="https://medium.com/@bolajiayodeji/how-to-test-a-pull-request-locally-before-merging-634bb205d3a6">How
+                                    to
+                                    test a Pull Request locally before Merging.</a></h3>
+                            <p>In this tutorial, I would show you how to check, test and make changes to a pull request
+                                before merging.</p>
+                            <a href="https://medium.com/@bolajiayodeji/how-to-test-a-pull-request-locally-before-merging-634bb205d3a6"
+                                class="btn section-btn">Read
                                 article</a>
                         </div>
                     </div>
@@ -428,11 +434,11 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <small><i class="fa fa-clock-o"></i> March 28, 2018</small>
-                            <h3><a href="https://medium.com/@bolajiayodeji/how-to-host-your-code-on-github-a409e906c72e">How
-                                    to host your code on github</a></h3>
-                            <p>Using github as a hosting platform from Github Desktop App.</p>
-                            <a href="https://medium.com/@bolajiayodeji/how-to-host-your-code-on-github-a409e906c72e"
+                            <small><i class="fa fa-clock-o"></i> Nov 8, 2018</small>
+                            <h3><a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/">How
+                                    to build Progressive Web Apps and deploy to Firebase and GitHub Pages.</a></h3>
+                            <p>In this Codelab, we are going to convert a basic static site into a Progressive Web App</p>
+                            <a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/"
                                 class="btn section-btn">Read article</a>
                         </div>
                     </div>
@@ -442,11 +448,13 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <small><i class="fa fa-clock-o"></i> May 2, 2018</small>
-                            <h3><a href="https://medium.com/@bolajiayodeji/introduction-to-bootstrap-b23da90eada7">Introduction
-                                    to Bootstrap</a></h3>
-                            <p>Quick tutorial on bootstrap framework, Introduction and how to use.</p>
-                            <a href="https://medium.com/@bolajiayodeji/introduction-to-bootstrap-b23da90eada7" class="btn section-btn">Read
+                            <small><i class="fa fa-clock-o"></i> Nov 5, 2018</small>
+                            <h3><a href="https://medium.com/@bolajiayodeji/how-to-convert-github-markdown-files-to-a-simple-website-b08602d05e1c">How
+                                    to convert GitHub Markdown files to a simple website</a></h3>
+                            <p>This little guide demonstrate how to turn any Github repository with a bunch of Markdown
+                                files into a simple website using Github Pages and Jekyll.</p>
+                            <a href="https://medium.com/@bolajiayodeji/how-to-convert-github-markdown-files-to-a-simple-website-b08602d05e1c"
+                                class="btn section-btn">Read
                                 article</a>
                         </div>
                     </div>
@@ -468,9 +476,9 @@
                 <div class="container">
                     <div class="row">
                         <div style="text-align: center;" class="col-lg-12">
-                            <h2> <i class="fa fa-arrow-right"></i>Read all my articles </h2>
+                            <h2> <i class="fa fa-arrow-right"></i> Read all my articles <i class="fa fa-arrow-left"></i></h2>
                             <h2>
-                                <a href="https://medium.com/@bolajiayodeji" class="link-btn"> Click Here <i class="fa fa-medium"></i></a>
+                                <a href="https://medium.com/@bolajiayodeji" class="link-btn"> Click Here</a>
                             </h2>
                         </div>
                     </div>
@@ -499,12 +507,13 @@
                 <div class="col-md-3 col-sm-6">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                        <a href="https://github.com/fremerinc/Tasksify" target=_blank" class="">
+                        <a href="https://netty-finder.herokuapp.com" target="_blank" class="">
                             <img src="images/work-image1.png" class="img-responsive" alt="Work">
 
                             <div class="work-info">
-                                <h3>Tasksify</h3>
-                                <small>Create and manage your tasks with Tasksify</small>
+                                <h3>NettyFinder</h3>
+                                <small>This script checks a Nigerian Telephone number and detects which network it
+                                    belongs to.</small>
                             </div>
                         </a>
                     </div>
@@ -527,12 +536,12 @@
                 <div class="col-md-3 col-sm-6">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                        <a href="https://themindsetseries.com" target="_blank" class="">
+                        <a href="https://inside-ful.com.ng" target="_blank" class="">
                             <img src="images/work-image3.png" class="img-responsive" alt="Work">
 
                             <div class="work-info">
-                                <h3>The Mindset Series</h3>
-                                <small>Series Blog</small>
+                                <h3>InsideFUL</h3>
+                                <small>Lifestyle Blog</small>
                             </div>
                         </a>
                     </div>
@@ -554,10 +563,11 @@
                 <div class="container">
                     <div class"row">
                         <div style="text-align: center;" class="col-lg-12">
-                            <h2> <i class="fa fa-arrow-right"></i>View my other projects on github </h2>
+                            <h2> <i class="fa fa-arrow-right"></i>View my other projects on github <i class="fa fa-arrow-left"></i>
+                            </h2>
                             <h2>
-                                <a href="https://github.com/bolajiayodeji?tab=repositories/" class="link-btn">Click
-                                    Here <i class="fa fa-github"></i></a>
+                                <a href="https://github.com/BolajiAyodeji?tab=repositories" class="link-btn">Click
+                                    Here&nbsp; <i class="fa fa-github"></i></a>
                             </h2>
                         </div>
                     </div>
@@ -833,7 +843,9 @@
                         <div class="col-md-6 col-sm-5">
                             <div class="copyright-text">
                                 <p>Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script>
+                                    <script>
+                                        document.write(new Date().getFullYear());
+                                    </script>
                                 </p>
                             </div>
                         </div>
@@ -870,7 +882,7 @@
         </div>
     </footer>
 
-    <!-- SCROLL TO TOP 
+    <!-- SCROLL TO TOP
     <a style="text-decoration: none" class="scroll-to-top smoothScroll" href="#home">
         <i class="fa fa-arrow-up"></i></a> -->
 
@@ -883,7 +895,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="js/smoothscroll.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 
