--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
                     <h1>
-                        <a href="" class="typewrite" data-period="200" data-type='[ "Hi, Im Bolaji Ayodeji.", "Im a Tech Geek", "Im a Front-end Developer", "I write code", "I Love OpenSource Development", "I Love to Design", "Im passionate about developing and designing brilliant innovative products", "Welcome to my portfolio website", "Enjoy!"]'>
+                        <a href="" class="typewrite" data-period="200" data-type='[ "Hi, I&#39;m Bolaji Ayodeji.", "I&#39;m a Tech Geek", "I&#39;m a Front-end Developer", "I write code", "I Love contributing to Open Sourced Projects", "I Love to Design", "I&#39;m passionate about developing and designing brilliant innovative products", "Welcome to my portfolio", "Enjoy!"]'>
                             <span class="wrap"></span>
                         </a>
                     </h1>
@@ -241,7 +241,7 @@
 
                 <div class="col-md-4 col-sm-12">
                     <div>
-                        <img src="images/bolaji.jpg" class="img-responsive about-image" alt="Bolaji Ayodeji">
+                        <img src="images/bolaji.svg" class="img-responsive center about-image" alt="Bolaji Ayodeji">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
@@ -249,15 +249,6 @@
             </div>
         </div>
     </section>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <a href="https://certification.templatemonster.com/" target="_blank"><img src="images/cpb.jpg" class="ml1 img-responsive center"
-                        alt="TemplateMonster Certified Partner Badge"></a>
-            </div>
-        </div>
-    </div>
 
     <!-- <div class="container">
         <div class="row">
@@ -797,6 +788,8 @@
                         <p><i class="fa fa-phone"></i> [+234] 8109445504</p>
                         <p><i class="fa fa-envelope"></i> mailtobolaji@gmail.com</p>
                         <p><i class="fa fa-envelope"></i> sirbeejay1@gmail.com</p>
+                        <p><i class="fa fa-map-marker"></i> FULOKOJA, Lokoja, Kogi State,
+                            Nigeria.</p>
                         <p><i class="fa fa-paper-plane"></i> Use the chat bot <i class="fa fa-arrow-right"></i></p>
                     </div>
                 </div>
@@ -817,12 +810,8 @@
 
                 <div class="col-md-3 col-sm-4">
                     <div class="footer-thumb">
-                        <h2>Find me</h2>
-                        <p><i class="fa fa-map-marker"></i> Behind Commisioners Quarters, <br> Lokoja, Kogi State,
-                            Nigeria.</p>
-                        <br />
-                        <p><i class="fa fa-map-marker"></i> Department Of Computer Science, Federal University Lokoja,
-                            Kogi State.</p>
+                        <a href="https://certification.templatemonster.com" target="_blank"><img src="images/certified.png"
+                                class="img-responsive center certified" alt="TemplateMonster Certified Partner Badge"></a>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-4">
